@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003-2004 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-spvr.scm,v 1.11 2005/10/06 05:30:03 nobsun Exp $
+;; $Id: kahua-spvr.scm,v 1.11.6.1 2006/01/18 11:35:24 nobsun Exp $
 
 ;; For clients, this server works as a receptionist of kahua system.
 ;; It opens a socket where initial clients will connect.
@@ -17,6 +17,7 @@
 
 (use gauche.charconv)
 (use gauche.net)
+(use gauche.threads)
 (use gauche.process)
 (use gauche.logger)
 (use gauche.selector)
@@ -415,7 +416,7 @@
 
 (define-method ping-activate ((spvr <kahua-spvr>) (worker <kahua-worker>))
   (let*
-      ((selector (selector-of spvr))
+      (;(selector (selector-of spvr))
        (sock #f)
        (in   #f)
        (out  #f)	
@@ -424,7 +425,7 @@
 	       (set! (ref worker 'ping-last-time) (sys-time))
 	       (receive-message fd)
 	       (ping-deactivate worker)
-			   ; (log-worker-action "ping respond" worker)
+	       (log-worker-action "ping respond" worker)
 	       ))
 
        (reset-sock
@@ -435,7 +436,7 @@
 					   (ref spvr 'sockbase))))
 	  (set! in   (socket-input-port sock))
 	  (set! out  (socket-output-port sock))
-	  (selector-add!  (selector-of spvr) in proc '(r))
+;	  (selector-add!  (selector-of spvr) in proc '(r))
 	  )))
 
     (set! (ref worker 'pinger)
@@ -444,12 +445,15 @@
               (reset-sock)
               (set! (ref worker 'ping-responded) #f)
               (send-message out `(("x-kahua-ping" ,(worker-id-of worker)))
-                            '()))))
+                            '())
+	      (proc in #f)
+	      )
+	    )
+	  )
     (set! (ref worker 'ping-deactivator)
 	  (lambda () 
-	    (and in (selector-delete! selector in proc #f))
+;	    (and in (selector-delete! selector in proc #f))
 	    (and sock (socket-close sock))))
-
     (ping-to-worker worker)
     ))
 
@@ -530,25 +534,29 @@
 
 (define-method dispatch-to-worker ((self <kahua-worker>) header body cont)
   (let* ((spvr (ref self 'spvr))
-         (selector (selector-of spvr))
+;        (selector (selector-of spvr))
          (sock (make-client-socket
                 (worker-id->sockaddr (worker-id-of self)
                                      (ref spvr 'sockbase))))
-         (out  (socket-output-port sock)))
+         (out  (socket-output-port sock))
+;	 (in   (socket-input-port sock))
+	 )
 
     (define (handle fd flags)
       (guard (e (else
-                 (selector-delete! selector (socket-fd sock) handle #f)
+;                (selector-delete! selector (socket-fd sock) handle #f)
                  (socket-close sock)
                  (cont '(("x-kahua-status" "SPVR-ERROR"))
                        (list (ref e 'message) (kahua-error-string e #t)))))
         (receive (header body) (receive-message (socket-input-port sock))
-          (selector-delete! selector (socket-fd sock) handle #f)
+;         (selector-delete! selector (socket-fd sock) handle #f)
           (socket-close sock)
           (cont header body))))
 
     (send-message out header body)
-    (selector-add! selector (socket-fd sock) handle '(r)))
+    (handle #f #f)
+;   (selector-add! selector (socket-fd sock) handle '(r))
+    )
   )
 
 ;;;=================================================================
@@ -928,7 +936,10 @@
       (selector-add! (selector-of spvr)
                      (socket-fd kahua-sock)
                      (lambda (fd flags)
-                       (handle-kahua spvr (socket-accept kahua-sock)))
+		       (thread-start!
+			(make-thread
+			 (lambda ()
+			   (handle-kahua spvr (socket-accept kahua-sock))))))
                      '(r)))
     (when http-socks
       (dolist (http-sock http-socks)
